--- a/src/components/appheadersearch.main.less
+++ b/src/components/appheadersearch.main.less
@@ -80,8 +80,7 @@
         width: 100%;
         transition: none;
         font-size: 18px;
-        padding: 10px;
-        padding-left: 20px;
+        padding: 10px 45px 10px 20px;
         border-bottom: 0;
 
         &::placeholder {
